# desafio_api_fastapi_tdd

./: README.md  pyproject.toml
store/: main.py
