[tool.poetry]
name = "desafio-fastapi-tdd"
version = "0.1.0"
description = "projeto bootcamp Vivo Python AI Backende Developer"
authors = ["JoaoGaBRiel-X <joaogabriel.mc@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
motor = "^3.5.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
